--- a/package.json
+++ b/package.json
@@ -5,20 +5,25 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start":"nodemon index.js"
+    "start": "nodemon index.js"
   },
   "author": "sp",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-joi-validation": "^5.0.0",
     "fs": "0.0.1-security",
+    "joi": "^17.3.0",
     "knex": "^0.21.12",
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
     "mysql": "^2.18.1",
     "nodemon": "^2.0.6",
-    "objection": "^2.2.3"
+    "objection": "^2.2.3",
+    "path": "^0.12.7",
+    "pg": "^8.5.1"
   }
 }
