--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express-joi-validation": "^5.0.0",
     "fs": "0.0.1-security",
     "joi": "^17.3.0",
+    "jsonwebtoken": "^8.5.1",
     "knex": "^0.21.12",
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
