--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "nodemon": "^2.0.6",
     "objection": "^2.2.3",
     "path": "^0.12.7",
-    "pg": "^8.5.1"
+    "pg": "^8.5.1",
+    "swagger-jsdoc": "^6.0.0-rc.3",
+    "swagger-ui-express": "^4.1.5"
   }
 }
